@@ -6,6 +6,8 @@
 - Fixed issue #9902: [ConsoleTools] Problems on Windows.
 - Fixed issue #10594: ezcConsole*Options throw incorrect exceptions.
 - Fixed issue #10595: ezcConsole*Options perform improper string checks.
+- Fixed issue #10596: ezcConsoleTable* classes do not perform proper property
+  checks.
 
 1.2 - Monday 18 December 2006
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
